--- a/exercises/machine-learning/Neural-Network/deep_neural_networks.ipynb
+++ b/exercises/machine-learning/Neural-Network/deep_neural_networks.ipynb
@@ -32,11 +32,11 @@
         "!pip install tensorflow"
       ],
       "metadata": {
-        "id": "lmMgEQ4_kB9s",
-        "outputId": "44d6ea35-95c5-4b3c-e9c4-dbe8d82ee78b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lmMgEQ4_kB9s",
+        "outputId": "44d6ea35-95c5-4b3c-e9c4-dbe8d82ee78b"
       },
       "id": "lmMgEQ4_kB9s",
       "execution_count": 24,
@@ -121,11 +121,11 @@
         "print(f\"Size of train_images - {train_images.shape}\")"
       ],
       "metadata": {
-        "id": "RdlVhimuZKLt",
-        "outputId": "724b1616-934c-4a8a-879b-a553689b41ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RdlVhimuZKLt",
+        "outputId": "724b1616-934c-4a8a-879b-a553689b41ca"
       },
       "id": "RdlVhimuZKLt",
       "execution_count": 27,
@@ -159,12 +159,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "8mxXB3SoaUPG",
-        "outputId": "d7fb08ae-57c2-484c-c379-81dcd2cf94b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        }
+        },
+        "id": "8mxXB3SoaUPG",
+        "outputId": "d7fb08ae-57c2-484c-c379-81dcd2cf94b9"
       },
       "id": "8mxXB3SoaUPG",
       "execution_count": 28,
@@ -213,12 +213,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "s9VCpFKjanHA",
-        "outputId": "998efe17-22e3-48d8-c4fb-459dedb29136",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 826
-        }
+        },
+        "id": "s9VCpFKjanHA",
+        "outputId": "998efe17-22e3-48d8-c4fb-459dedb29136"
       },
       "id": "s9VCpFKjanHA",
       "execution_count": 30,
@@ -286,11 +286,11 @@
         "]"
       ],
       "metadata": {
-        "id": "exbZ9N9pcaUm",
-        "outputId": "202d523c-07d7-4b5f-8113-fcb41ba95d36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "exbZ9N9pcaUm",
+        "outputId": "202d523c-07d7-4b5f-8113-fcb41ba95d36"
       },
       "id": "exbZ9N9pcaUm",
       "execution_count": 31,
@@ -308,11 +308,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# Loop through each model configuration\n",
         "for config in model_configurations:\n",
         "    print(f\"Training {config['name']}...\")\n",
         "\n",
+        "     # Create a sequential model using the layers defined in the configuration\n",
         "    model = tf.keras.Sequential(config['layers'])\n",
         "\n",
+        "    # Determine if from_logits should be used in the loss function\n",
+        "    # It should be False if the last layer is a Dense layer with a softmax activation\n",
         "    use_from_logits = not (isinstance(model.layers[-1], tf.keras.layers.Dense)\n",
         "                            and model.layers[-1].activation == tf.keras.activations.softmax)\n",
         "\n",
@@ -321,13 +325,15 @@
         "                  loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=use_from_logits),\n",
         "                  metrics=['accuracy'])\n",
         "\n",
-        "\n",
+        "    # Train the model and store the training history\n",
         "    history = model.fit(train_images, train_labels, epochs=10, verbose=1,\n",
         "                        validation_data=(train_images, train_labels))\n",
         "\n",
+        "    # Store the history of the current model\n",
         "    histories[config['name']] = history.history\n",
         "\n",
-        "\n",
+        "    # Get the validation accuracy and training loss from the last epoch\n",
+        "    # Use np.nan if validation_accuracy is not available\n",
         "    val_acc = history.history.get('val_accuracy', [np.nan])[-1]\n",
         "    train_loss = history.history['loss'][-1]\n",
         "\n",
@@ -341,11 +347,11 @@
         "    print(f\"Finished training {config['name']}. Validation Accuracy: {val_acc:.4f}, Training Loss: {train_loss:.4f}\")"
       ],
       "metadata": {
-        "id": "IqAKN5ThcuKQ",
-        "outputId": "a4893aeb-25f9-4539-bb0b-dc8cfeb3881a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IqAKN5ThcuKQ",
+        "outputId": "a4893aeb-25f9-4539-bb0b-dc8cfeb3881a"
       },
       "id": "IqAKN5ThcuKQ",
       "execution_count": 32,
@@ -427,7 +433,10 @@
     {
       "cell_type": "code",
       "source": [
+        "# Convert the results list into a Pandas DataFrame\n",
         "results_df = pd.DataFrame(results)\n",
+        "\n",
+        "# Find the best model based on validation accuracy\n",
         "best_model_result = results_df.sort_values(by='validation_accuracy', ascending=False,  na_position='last').iloc[0]\n",
         "\n",
         "print(\"\\n--- Best Model ---\")\n",
@@ -436,11 +445,11 @@
         "print(f\"Training Loss: {best_model_result['training_loss']:.4f}\")"
       ],
       "metadata": {
-        "id": "QSMZpahAc4-a",
-        "outputId": "97cbafd1-681c-429a-a6d5-59b01dfc5283",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QSMZpahAc4-a",
+        "outputId": "97cbafd1-681c-429a-a6d5-59b01dfc5283"
       },
       "id": "QSMZpahAc4-a",
       "execution_count": 33,
@@ -461,28 +470,33 @@
     {
       "cell_type": "code",
       "source": [
+        "# Get the layers configuration of the best model\n",
         "best_model_config_layers = best_model_result['model_config_layers']\n",
         "\n",
+        "# Create a new Sequential model using the best configuration for evaluation\n",
         "best_model_for_evaluation = tf.keras.Sequential(best_model_config_layers)\n",
         "\n",
+        "# Determine if from_logits should be used for the evaluation model's loss function\n",
         "use_from_logits_eval = not (isinstance(best_model_for_evaluation.layers[-1], tf.keras.layers.Dense)\n",
         "                            and best_model_for_evaluation.layers[-1].activation == tf.keras.activations.softmax)\n",
         "\n",
+        "# Compile the evaluation model\n",
         "best_model_for_evaluation.compile(optimizer='adam',\n",
         "                                  loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=use_from_logits_eval),\n",
         "                                  metrics=['accuracy'])\n",
         "\n",
+        "# Evaluate the best model on the test dataset\n",
         "test_loss, test_acc = best_model_for_evaluation.evaluate(test_images, test_labels, verbose=2)\n",
         "\n",
         "print(f'\\nTest loss for the best model ({best_model_result[\"model_name\"]}):', test_loss)\n",
         "print(f'Test accuracy for the best model ({best_model_result[\"model_name\"]}):', test_acc)"
       ],
       "metadata": {
-        "id": "dEXtpp6Nppu-",
-        "outputId": "fe1d090c-590a-4f54-a262-4e85eddc50da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dEXtpp6Nppu-",
+        "outputId": "fe1d090c-590a-4f54-a262-4e85eddc50da"
       },
       "id": "dEXtpp6Nppu-",
       "execution_count": 34,
@@ -502,19 +516,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# Prepare the model for making predictions\n",
+        "# If the last layer is not softmax, add a Softmax layer\n",
         "if not (isinstance(best_model_for_evaluation.layers[-1], tf.keras.layers.Dense) and best_model_for_evaluation.layers[-1].activation == tf.keras.activations.softmax):\n",
         "    probability_model = tf.keras.Sequential([best_model_for_evaluation, tf.keras.layers.Softmax()])\n",
         "else:\n",
+        "    # If the last layer is already softmax, use the model directly\n",
         "    probability_model = best_model_for_evaluation # Model already outputs probabilities\n",
         "\n",
+        "# Make predictions on the test images\n",
         "predictions = probability_model.predict(test_images)"
       ],
       "metadata": {
-        "id": "sD6s6p7Lp0Nr",
-        "outputId": "3dcef55f-4f83-4d9f-9fc0-fb2b28777671",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sD6s6p7Lp0Nr",
+        "outputId": "3dcef55f-4f83-4d9f-9fc0-fb2b28777671"
       },
       "id": "sD6s6p7Lp0Nr",
       "execution_count": 35,
@@ -585,12 +603,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "n3AWf-DapFBW",
-        "outputId": "264361cb-c0ca-4273-f8e2-f62c1bfa7620",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 738
-        }
+        },
+        "id": "n3AWf-DapFBW",
+        "outputId": "264361cb-c0ca-4273-f8e2-f62c1bfa7620"
       },
       "id": "n3AWf-DapFBW",
       "execution_count": 37,
